Tweaked sound-toggle width to prevent wrap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -501,6 +501,7 @@ header nav li.user:hover {
 
 .sound_toggle {
     float: right;
+    width: 90px;
     margin-right: 20px;
     font-size: 14px;
 }
